--- a/backup/index.html
+++ b/backup/index.html
@@ -66,15 +66,15 @@
             </ul>
 
           </div>
-          <!-- pc_navi::close-->
+          <!-- pc_navi::end-->
         </div>
       </div>
-      <!-- row::close -->
+      <!-- row::end -->
     </div>
-    <!-- header_in::close -->
+    <!-- header_in::end -->
   </header>
 
-  <!--　cover_area::open -->
+  <!--　cover_area::begin -->
   <div id="cover_area">
     <div class="container">
       <div class="twelve columns">
@@ -82,9 +82,9 @@
       </div>
     </div>
   </div>
-  <!-- cover_area::close -->
+  <!-- cover_area::end -->
 
-  <!-- service_area::open -->
+  <!-- service_area::begin -->
   <div id="service_area">
     <div class="container">
       <div class="row">
@@ -97,7 +97,7 @@
           <div class="service_title">スマホアプリ開発サービス</div>
           <p>弊社では、お客様のさらなる販路拡大、認知度向上のためのスマホアプリ開発を行っております。独自に開発したシステム「brain gate」を利用し、素早くお客様のご要望にお応えします。</p>
         </div>
-        <!-- column::close -->
+        <!-- column::end -->
 
         <div class="four columns">
            <img class="u-max-full-width" src="images/top/service_02.jpg" alt="Webソリューションの開発" srcset="images/top/service_02@2x.jpg 2x">
@@ -105,7 +105,7 @@
           <div class="service_title">Webソリューションの開発</div>
           <p>ruby on railsや、Javaを使用したウェブソリューションの開発を行っております。ITの最先端を常に学習し、お客様のニーズにお応えいたします。スマホアプリとの連携も可能です。</p>
         </div>
-        <!-- column::close -->
+        <!-- column::end -->
 
         <div class="four columns">
           <img class="u-max-full-width" src="images/top/service_03.jpg" alt="会社概要" srcset="images/top/service_03@2x.jpg 2x">
@@ -113,15 +113,15 @@
           <div class="service_title">会社概要</div>
           <p>弊社は、2010年により豊かなくらしを皆様に提供することを目標に設立いたしました。まだまだ若い会社ではありますが、常に成長を続けております。</p>
         </div>
-        <!-- column::close -->
+        <!-- column::end -->
 
       </div>
     </div>
-    <!-- .containter::close -->
+    <!-- .containter::end -->
   </div>
-  <!-- #service_area::close -->
+  <!-- #service_area::end -->
 
-  <!-- #news_area::open -->
+  <!-- #news_area::begin -->
   <div id="news_area">
 
     <div class="container">
@@ -140,15 +140,15 @@
           </ul>
 
         </div>
-        <!-- .twelve .columns::close-->
+        <!-- .twelve .columns::end-->
       </div>
-      <!-- .row::close -->
+      <!-- .row::end -->
     </div>
-    <!-- .container::close -->
+    <!-- .container::end -->
   </div>
-  <!-- #news_area::close -->
+  <!-- #news_area::end -->
 
-  <!-- #googlemap_area::open -->
+  <!-- #googlemap_area::begin -->
   <div id="googlemap_area">
 
     <!-- ここでGoogleMapのjavascriptをhttp通信にしているとhttpsで制限され、読み込めない-->
@@ -213,10 +213,10 @@
     <div id="map1" style="width:100%; height:400px; margin:0 auto;"></div>
 
   </div>
-  <!-- #googlemap_area::close -->
+  <!-- #googlemap_area::end -->
 
 
-  <!-- footer::open -->
+  <!-- footer::begin -->
   <footer>
     <div class="container">
       <div class="row">
@@ -238,22 +238,22 @@
             <li><a href="company.html">会社概要</a></li>
           </ul>
         </div>
-        <!-- columns::close -->
+        <!-- columns::end -->
       </div>
-      <!-- row::close -->
+      <!-- row::end -->
 
       <div class="row">
         <!-- columns -->
         <div class="twelve columns sp">
           <p class="copy">copyright (C) SampleCompany all rights reserved.</p>
         </div>
-        <!-- columns::close -->
+        <!-- columns::end -->
       </div>
-      <!-- row::close -->
+      <!-- row::end -->
 
     </div>
   </footer>
-  <!-- footer::close-->
+  <!-- footer::end-->
 
   <!-- jQueryライブラリの読み込み-->
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
