--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>株式会社サンプル</title>
+  <title>NEWS | 株式会社サンプル</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -41,6 +41,7 @@
   (document, 'script', 'facebook-jssdk'));
   </script>
 
+  <!--header -->
   <header>
     <!-- headerはindex.htmlと共用可能 -->
     <div id="header_in" class="container">
@@ -113,16 +114,26 @@
           <h2>ニュースリリース</h2>
           <!-- unorderedList->.news_li::open -->
           <ul class="news_li">
-            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>　<!-- 1-->
-            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>　<!-- 2-->
-            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>　<!-- 3-->
-            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>　<!-- 4-->
-            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>　<!-- 5-->
-            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>　<!-- 6-->
-            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>　<!-- 7-->
-            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>　<!-- 8-->
-            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>　<!-- 9-->
-            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>　<!--10-->
+            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
+            <!-- 1-->
+            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
+            <!-- 2-->
+            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
+            <!-- 3-->
+            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
+            <!-- 4-->
+            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
+            <!-- 5-->
+            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
+            <!-- 6-->
+            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
+            <!-- 7-->
+            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
+            <!-- 8-->
+            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
+            <!-- 9-->
+            <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
+            <!--10-->
           </ul>
           <!-- ul(.news_li)::close -->
         </div>
@@ -143,10 +154,10 @@
           <!-- .pc_sidemenu::close -->
 
           <!-- Facebookページブラグイン appear-->
-          <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
+          <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
             <blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore">
               <a href="https://www.facebook.com/facebook">Facebook</a>
-              </blockquote>
+            </blockquote>
           </div>
           <!-- Facebooke埋込div::close-->
 
