--- a/company.html
+++ b/company.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>株式会社サンプル</title>
+  <title>COMPANY INFO | 株式会社サンプル</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -41,6 +41,7 @@
   (document, 'script', 'facebook-jssdk'));
   </script>
 
+  <!--header -->
   <header>
     <!-- headerはindex.htmlと共用可能 -->
     <div id="header_in" class="container">
@@ -122,9 +123,13 @@
                 box-sizing: border-box;
               }
           -->
-            <tr> <!--Table Row(行)-->
-              <th>会社名</th> <!-- Table Header(見出し）-->
-              <td>株式会社サンプル</td> <!-- Table Data(データ：セル) -->
+
+            <!--Table Row(行)-->
+            <tr>
+              <!-- Table Header(見出し）-->
+              <th>会社名</th>
+              <!-- Table Data(データ：セル) -->
+              <td>株式会社サンプル</td>
             </tr>
             <tr>
               <th>代表取締役</th>
@@ -176,12 +181,12 @@
           <!-- .pc_sidemenu::close -->
 
           <!-- Facebookページブラグイン appear-->
-          <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
+          <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
             <blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore">
               <a href="https://www.facebook.com/facebook">Facebook</a>
-              </blockquote>
+            </blockquote>
           </div>
-          <!-- Facebooke埋込div::close-->
+          <!-- Facebooke埋込div close-->
 
         </div>
         <!-- #sidebar .three .columns::close 3/12グリッド〆-->
